--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-mitsuba-3.5.2
-pandas-2.2.3
-ipywidgets-8.1.5
-bezier-2024.6.20
-imageio-2.35.1
-perlin_numpy-0.0.1
-matplotlib-3.9.2
-tqdm-4.66.5
-opencv_python-4.10.0.84
-requests-2.32.3
-scipy-1.14.1
+mitsuba==3.5.2
+pandas==2.2.3
+ipywidgets==8.1.5
+bezier==2024.6.20
+imageio==2.35.1
+perlin_numpy==0.0.1
+matplotlib==3.9.2
+tqdm==4.66.5
+opencv_python==4.10.0.84
+requests==2.32.3
+scipy==1.14.1
+scikit_image==0.24.0
